Archives/SQLGrammar.txt
simplefied core SQL grammar:
terminals are in ALLCAPS
nonterminals in CamelCase
statement is the start symbol
"" denotes the empty word

statement = INSERTINTO insertStatement |
            selectStatement |
            UPDATE updateStatement |
            DELETE deleteStatement

/////
///INSERT
/////

insertStatement = UID insertBody

insertBody = optionalParenthesisedListOfUIds VALUES parenthesisedListOfValues

optionalParenthesisedListOfUIds = OPENPAREN listOfUIds CLOSEPAREN |
                                  ""

parenthesisedListOfValues OPENPAREN listOfValues CLOSEPAREN

value = ARGUMENT |
        NUMERIC |
        LITERAL |
        BOOL

listOfValues = value optionalConjunctListOfValues

optionalConjunctListOfValues = COMMA listOfValues |
                               ""

listOfUIds = UID optionalConjunctListOfUIds

optionalConjunctListOfUIds = COMMA listOfUIds |
                             ""

//////
///SELECT
/////

selectStatement = selectStatementInner optionalOrderByClause

optionalOrderByClause = ORDERBY concreteListOfAttributes |
                        ""

concreteAttribute = UID |
                    QID

concreteListOfAttributes = concreteAttribute optionalOrderDirection optionalConjunctConcreteListOfAttributes

optionalConjunctConcreteListOfAttributes = COMMA concreteListOfAttributes |
                                           ""

optionalOrderDirection = ORDERDIRECTION |
                         ""

selectStatementInner = SELECT optionalDistinct selectBody

optionalDistinct = DISTINCT |
                   ""

subSelectStatement = OPENPAREN selectStatement CLOSEPAREN

selectBody = selectionList FROM fromList optionalWhereClause optionalGroupClause

selectionClause = STAR |
                  selectionList

selectionList = selectable optionalConjunctSelectionList

optionalConjunctSelectionList = COMMA selectionList |
                                ""

selectable = QID |
             UID |
             QSTARID |
             AGGREGATE renamable

fromId = UID renamable |
         subSelectStatement AS UID

renamable = AS UID |
            ""

fromList = fromId optionalConjunctFromList

optionalConjunctFromList = COMMA fromList |
                           ""

optionalWhereClause = WHERE predicate |
                      ""

optionalGroupClause = GROUPBY listOfUIds |
                      ""

/////
//PREDICATES
////

predicate = comparable compareOperator comparable optionalConjuctPredicate

optionalConjunctPredicate = AND predicate |
                            ""

compareOperator = COMPARATOR |
                  EQUAL

comparable = QID |
             UID |
             ARGUMENT |
             LITERAL |
             NUMERIC |
             BOOL

////
//UPDATE
/////

updateStatement = UID SET assignmentList optionalWhereClause

assignmentList = UID EQUAL value optionalConjunctAssignmentList

optionalConjunctAssignmentList = COMMA assignmentList |
                                 ""

////
//DELETE
////

deleteStatement = UID WHERE predicate
